Added uuid support to prevent duplicate call collisions

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/esopian/timeperiod/issues"
+  },
+  "dependencies": {
+    "node-uuid": "~1.4.1"
   }
 }
